--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,6 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
     color: rgb(0, 0, 0);
     font-family: sans-serif, Arial, Helvetica;
     background-color: silver;
@@ -36,7 +34,7 @@ h1 {
 }
 
 
-h1::after {
+header h1::after {
     content: 'Wareing';
     color: rgb(87, 6, 6);
 }
@@ -61,6 +59,7 @@ li {
 }
 
 .work {
+    display:block;
     line-height: .23in;
     padding-right:2.5in;
     margin: 0in 0in 0in 0in;
@@ -120,12 +119,13 @@ div {
 }
 
 img {
+    min-width: none;
+    min-height: none;
     display:flex;
-    flex-direction: column;
     height: 400px;
     width:430px;
     align-items: stretch;
-    padding-bottom: .5in;
+    margin-bottom: .5in;
 }
 
 .proof-of-concept img {
@@ -137,5 +137,18 @@ div header {
     border-style:ridge;
     border-color:gray;
     text-align: center;
+}
+
+/*THIS IS DRIVING ME LITERALLY
+INSANE AND IF I WORK ON THIS ANYMORE
+I'M GOING TO START BREAKING MY FURNITURE*/
+.contact-me {
+    margin-top: 10in;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(87, 6, 6);
+    background-color: rgb(68, 131, 185);
+    padding: .5in;
 }
     
