--- a/assets/style.css
+++ b/assets/style.css
@@ -135,6 +135,12 @@ img {
     width:550px;
 }
 
+.reel-search img {
+    height: 400px;
+    width: 550px;
+}
+
+
 div header {
     border-style:ridge;
     border-color:gray;
@@ -149,6 +155,17 @@ have mercy.*/
 .contact-me {
     margin-top: 10in;
     display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(87, 6, 6);
+    background-color: rgb(68, 131, 185);
+    padding: .5in;
+}
+
+#contact-me {
+    margin-top: 10in;
+    display:flex;
+    position: fixed;
     flex-direction: row;
     justify-content: space-between;
     color: rgb(87, 6, 6);
